kubernetes-manifests/gateway-service/gateway-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: spring-cloud-config
  labels:
    app: gateway-service
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
      tier: frontend
  template:
    metadata:
      labels:
        app: gateway-service
        tier: frontend
    spec:
      containers:
        - name: gateway-service
          image: gateway-service
          ports:
            - name: http-server
              containerPort: 8080
