kubernetes-manifests/gateway-service/gateway-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: spring-cloud-config
  labels:
    app: gateway-service
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
